--- a/content/404.md
+++ b/content/404.md
@@ -8,3 +8,7 @@ aliases = ["migrate-from-jekyl"]
 
 
 404 Not Found
+
+ブログのシステムを移行したため、記事の URL が変わっています。  
+記事自体は全て移しましたので、 トップページ [swiswiswift.com](https://swiswiswift.com/) の記事リストの中から検索していたければ記事が見つかると思います。  
+よろしくお願いします。  
